changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

==============================================================================
Changes for 1.50.0
==============================================================================

server/attack.c: Don't make doors (or other objects) harder to hit because
   they lack a move type.  Remove unused variable.
MSW 2010-04-25

Fix a missing whitespace issue that makes books read like "which gives the
recipientImmunity to magic".
Kevin Bulgrien 2010-04-25

Add ability to send face number (instead of name) - add new definition
to newclient.h, update protocol doc.  First commit is so shared newclient.h
file can get used.
Files affected: include/shared/newclient.h doc/Developers/protocol
MSW 2010-04-24

Replace [NULL] from response to command-line `crossfire-server -v` with the
same text that is sent back to a client when it requests server version.
Make `crossfire-server -help` information for -v more accurate to current
function.
Kevin Bulgrien 2010-04-24

CRE: expose 'item' as an Object instead of an Archetype to scripting engine.
Makes things much easier.
Nicolas Weeger 2010-04-22

CRE: ac and wc as properties for objects.
Nicolas Weeger 2010-04-22

random_maps/treasure.c
- Make sure random map dungeon level numbers on signs and keys match up and
  make sense.  This is an off-by-one issue.
include/map.h
- Change mapstruct members enter_x and enter_y to sint16 since it appears that
  most other server code uses sint16 types for map coordinates, and the change
  results in dropping some -Wconversion warnings.  Use of -1,-1 in an exit is