@@ -571,6 +571,9 @@ int steal(object *op, int dir, object *skill);
 int pick_lock(object *pl, int dir, object *skill);
 int hide(object *op, object *skill);
 int jump(object *pl, int dir, object *skill);
+int detect_curse_on_item(object *pl, object *tmp, object *skill);
+int detect_magic_on_item(object *pl, object *tmp, object *skill);
+int identify_object_with_skill(object *tmp, object *pl, object *skill, int print_on_success); 
 int skill_ident(object *pl, object *skill);
 int use_oratory(object *pl, int dir, object *skill);
 int singing(object *pl, int dir, object *skill);
